--- a/compose.yaml
+++ b/compose.yaml
@@ -2,13 +2,16 @@ services:
   app:
     build: .
     ports:
-      - "5173:5173" # Frontend web app
-      - "8080:8080" # Linera faucet/service
-      - "9001:9001" # Linera shard proxy
+      - "5173:5173"   # Frontend web app
+      - "8080:8080"   # Linera GraphQL service
+      - "8079:8079"   # Linera faucet (internal)
+      - "9001:9001"   # Linera shard proxy
       - "13001:13001" # Linera shard
     volumes:
       - .:/build
     environment:
-      - LINERA_FAUCET_URL=http://localhost:8080
+      - LINERA_FAUCET_URL=http://localhost:8079
     stdin_open: true
     tty: true
+    # Give more time for Linera network startup
+    stop_grace_period: 30s
